# matrix-python-sdk

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  E2E_overview.rst  MANIFEST.in  README.md  README.rst  genindex.html  index.html  matrix_client.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
_modules/: index.html
_modules/matrix_client/: api.html  checks.html  client.html  errors.html  room.html  user.html
_sources/: index.rst.txt  matrix_client.rst.txt  matrix_client.txt  modules.txt
docs/: Makefile
docs/source/: conf.py  index.rst  matrix_client.rst
matrix/: api.py  client.py
matrix_client/: __init__.py  _api_async.py  _api_asyncio.py  admin_api.py  api.py  api_async.py  api_asyncio.py  checks.py  client.py  crypto.py  device.py  errors.py  group.py  queue.py  room.py  user.py  utils.py
matrix_client/crypto/: crypto_store.py  device_list.py  encrypt_attachments.py  key_export.py  key_sharing.py  megolm_outbound_session.py  olm_device.py  one_time_keys.py  sessions.py  verified_event.py
samples/: ChangeDisplayName.py  GetUserProfile.py  ListDirectChats.py  ListOwnGroups.py  SetRoomProfile.py  SimpleChatClient.py  UserPassOrTokenClient.py  e2e_overview.py  samples_common.py  startSample.sh
test/: admin_api_test.py  api_test.py  client_test.py  conftest.py  device_test.py  functional_test.py  matrix_spec_coverage.py  matrix_spec_coverage_plugin.py  response_examples.py  test_async_api.py  user_test.py
test/crypto/: crypto_store_test.py  device_list_test.py  (+5 more)
(+2 files in other folders)
