[flake8]
max-line-length = 90

[pep8]
max-line-length = 90

[aliases]
test=pytest

[tool:pytest]
addopts = test/

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
line_length = 89
not_skip = __init__.py
sections=FUTURE,STDLIB,COMPAT,THIRDPARTY,TWISTED,FIRSTPARTY,TESTS,LOCALFOLDER
default_section=THIRDPARTY
known_first_party = matrix_client
known_tests=tests
multi_line_output=3
include_trailing_comma=true
combine_as_imports=true